[gd_scene load_steps=6 format=3 uid="uid://2fm7qdfdaswv"]

[ext_resource type="Script" path="res://Objects/Animals/animal_3.gd" id="1_qcgjl"]
[ext_resource type="Texture2D" uid="uid://bpfh2iybtox0f" path="res://Sprites/bunny_static.png" id="2_s2rup"]
[ext_resource type="PackedScene" uid="uid://b5pc55kwthxy" path="res://Components/move_component.tscn" id="3_83t24"]
[ext_resource type="PackedScene" uid="uid://dja8ne81tx64y" path="res://Components/state_component.tscn" id="4_eso3x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_asf36"]
size = Vector2(64, 64)

[node name="Animal3" type="RigidBody2D"]
position = Vector2(-32, -32)
collision_layer = 0
gravity_scale = 0.5
freeze_mode = 1
script = ExtResource("1_qcgjl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_asf36")

[node name="TextureButton" type="TextureButton" parent="."]
offset_right = 64.0
offset_bottom = 64.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(32, 32)
scale = Vector2(4.2957, 4.2957)
texture = ExtResource("2_s2rup")

[node name="BottomPoint" type="Node2D" parent="."]
position = Vector2(32, 64)

[node name="StateComponent" parent="." instance=ExtResource("4_eso3x")]

[node name="MoveComponent" parent="." instance=ExtResource("3_83t24")]
move_chance = 20

[node name="Tick" type="Timer" parent="."]
autostart = true

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="timeout" from="Tick" to="." method="_on_tick_timeout"]
